# dat151

./: .gitignore
assignment1/: studentdb.sql
assignment3/: abdb.sql  abdblog.sql  task2.sql  task3.sql  task4.sql  task5.org
assignment3/task5/: ChangeLog.md  LICENSE  Main.hs  a.txt  default.nix  release0.nix  shell.nix  task5.cabal  task5.org  task5.sql
assignment3/task5csv/: task5csv.sql  task5normal.sql  tmp.sql
assignment5/: README.md  task2.sql  task3.org
assignment6/: base.ldif  certs.ldif  db.ldif  firewallsetup.sh  ldapsetup.sh  monitor.ldif  test.txt
assignment7/: backupdb.org  dbbackup.sh
assignment7/dbs/initial/: pendantdelete.sql  threetabs.sql
