name:                task5
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Thomashrb
maintainer:          thomas@beat.no
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable task5
  main-is:             Main.hs
  build-depends:       base < 5
                     , turtle
                     , bytestring
                     , text
                     , directory
  default-language:    Haskell2010
